docs/src/content/versioned/components/1.2.0/fr/resume-des-erreurs/code.mdx
---
layout: '~layouts/ComponentTabLayout.astro'
pageTitle: Résumé des erreurs - Code
componentName: Résumé des erreurs
tagName: '<gcds-error-summary>'
alsoCalled: liste d'erreurs
description: Un résumé des erreurs consiste en une liste des erreurs rencontrées par les utilisateur·rice·s dans un formulaire.
figma: 'https://www.figma.com/community/file/1369337721343886324'
github: 'https://github.com/cds-snc/gcds-components/tree/main/packages/web/src/components/gcds-error-summary'
version: 1.6.0
previewLabel: Aperçu du composant de résumé des erreurs
dateModified: '2025-05-06T09:04:06-07:00'
---

import { CodePreview, CodeBuilder } from '~components';
import { links } from '~i18n/links';

## Sur cette page

- [Codage et accessibilité des messages d'erreur](#codage-et-accessibilite-des-messages-derreur)
- [Exemples](#section-examples)
- [Générateur de code](#generateur-de-code)

## Codage et accessibilité des messages d'erreur

### Utiliser le résumé des erreurs avec les composants de Système de design GC

Tous les composants de Système de design GC sont livrés avec une gestion des erreurs par défaut pour les composants de formulaire requis. Dans le cas des résumés des erreurs, cela signifie que tout composant requis affichera un message d'erreur intercalé par défaut pendant l'événement `onBlur`. Ce message d'erreur sera indiqué dans le résumé des erreurs lors de l'envoi du formulaire.

Le résumé des erreurs de Système de design GC utilise l'attribut `listen` pour recueillir les erreurs. Lors de l'exécution de l'opération `onSubmit`, le résumé des erreurs dressera la liste des erreurs provenant des composants de Système de design GC. Les erreurs seront répertoriées dans le même ordre qu'elles apparaissent sur la page.

- Activez tous les contrôles nécessaires pour résoudre l'une ou l'autre des erreurs.
- Envisagez de remplacer tout <gcds-link href={links.fr.errorMessage}>message d'erreur</gcds-link> générique par défaut par un texte qui définit le problème concret et la façon de le résoudre.

### Utiliser le résumé des erreurs avec vos propres composants

Si vous utilisez certains de vos propres composants de formulaire :

- Ajoutez un message d'erreur en faisant passer l'attribut `error-links` pour tout composant ou élément que vous utilisez contenant un message d'erreur. Vous verrez ensuite apparaître les messages d'erreur.
- Associez le contenu de l'élément du résumé des erreurs à chacun des messages d'erreur.
- Classez les erreurs du résumé des erreurs dans le même ordre qu'elles apparaissent sur le formulaire.

### Choisir de modifier le contenu de l'entente d'erreur

Rédigez des en-têtes d'erreur plus précis en utilisant l'attribut `heading`.

<h2 id="section-examples">Exemples</h2>

Explorez les différentes façons de configurer le composant. Chaque exemple présente une mise en œuvre fonctionnelle et du code prêt à copier.

### Dans cette section

- [Attributs facultatifs](#section-optional)

<h3 id="section-optional">Attributs facultatifs</h3>

Ces attributs vous permettent de personnaliser ou d'enrichir le comportement et la présentation du composant.

#### `error-links`

L'attribut `error-links` définit la liste des erreurs à afficher dans le résumé des erreurs. Format : `{ link-href: link-label }`.

<CodePreview iframe
  code={`<gcds-error-summary error-links='{ "#error-href-1": "Élément du résumé des erreurs.", "#error-href-2": "Élément du résumé des erreurs.", "#error-href-3": "Élément du résumé des erreurs." }'>
  </gcds-error-summary>`}
/>

#### `heading`

L'attribut `heading` définit le titre du résumé des erreurs.

<CodePreview iframe
  code={`<gcds-error-summary heading="Titre" error-links='{ "#error-href-1": "Élément du résumé des erreurs.", "#error-href-2": "Élément du résumé des erreurs.", "#error-href-3": "Élément du résumé des erreurs." }'>
  </gcds-error-summary>`}
/>

#### `listen`

L'attribut `listen` contrôle si le résumé des erreurs écoute l'événement `gcdsError` pour générer la liste des erreurs. Par défaut, il est défini à `true`.

<CodePreview iframe
  code={`<gcds-error-summary error-links='{ "#error-href-1": "Élément du résumé des erreurs.", "#error-href-2": "Élément du résumé des erreurs.", "#error-href-3": "Élément du résumé des erreurs." }' listen>
  </gcds-error-summary>`}
/>

### Générateur de code

Générez une version du composant dont vous avez besoin en sélectionnant les propriétés de code correspondantes ou explorez les possibilités en choisissant différentes valeurs de code.

1. Choisissez des valeurs de code pour obtenir l'élément que vous voulez.
2. Obtenez le code et intégrez-le dans votre environnement.
3. Ajoutez tout contenu nécessaire au composant (comme le texte du libellé).

**Remarque** : Conformément à la pratique courante, le générateur de code utilise l'anglais pour tous les éléments de code.

<CodeBuilder version={frontmatter.version} tagName={frontmatter.tagName} />
